--- a/src/componentes/navbar/Navbar.css
+++ b/src/componentes/navbar/Navbar.css
@@ -11,8 +11,9 @@
   margin-top: 1em;
   text-decoration: none;
   color: #FFFFFF;
-  margin-left: 1em;
-font-family: "Roboto", sans-serif;
+  text-align: center;
+  margin-left: 3em;
+  font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
