--- a/src/componentes/navbar/Navbar.css
+++ b/src/componentes/navbar/Navbar.css
@@ -1,25 +1,29 @@
-.navbar{
-  background-color: #1A1A2E;  
-
+.navbar {
+  background-color: #1A1A2E;
 }
 
 .navbar-toggler-icon {
-    filter: invert(1); 
+  filter: invert(1); 
 }
 
-.navbar a{
-  margin-top: 1em;
+.logo-navbar {
+  width: 120px;
+}
+
+.nav-links {
+  display: flex;
+  align-items: center;
+}
+
+.nav-item {
+  margin-left: 2em;
   text-decoration: none;
   color: #FFFFFF;
-  margin-left: 1em;
-font-family: "Roboto", sans-serif;
-  font-optical-sizing: auto;
+  font-family: "Orbitron", sans-serif;
   font-weight: 500;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-  
+  transition: color 0.3s;
 }
-.navbar a:hover{
-    color: #8A2BE2;
-  }
+
+.nav-item:hover {
+  color: #8A2BE2;
+}
