--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,26 @@
-* {
-  font-family: 'Orbitron', sans-serif;
-}
-
-.fondo-general {
+body {
   background-color: #B0B0B0;
-  min-height: 100vh;
+  font-family: 'Montserrat', sans-serif;
+  color: #333;
 }
 
 
+main, p, span {
+  font-family: 'Montserrat', sans-serif;
+}
 
+button, .btn-agregar, .home-btn-agregar {
+  font-family: 'Orbitron', sans-serif;
+  font-size: 15px;
+}
+
+.navbar,
+.navbar a,
+.footer,
+.footer a {
+  font-family: 'Orbitron', sans-serif;
+  color: #FFFFFF;
+}
 
 
 
