--- a/src/componentes/navbar/Navbar.css
+++ b/src/componentes/navbar/Navbar.css
@@ -6,7 +6,6 @@
   filter: invert(1);
 }
 
-/* Logo más grande */
 .logo-navbar {
   width: 180px;
   transition: transform 0.3s ease;
@@ -27,7 +26,7 @@
   color: #FFFFFF;
   font-family: "Orbitron", sans-serif;
   font-weight: 500;
-  font-size: 1.3rem;   /* <-- Tamaño más grande */
+  font-size: 1.3rem;   
   transition: color 0.3s;
 }
 
@@ -35,10 +34,30 @@
   color: #8A2BE2;
 }
 
-/* Separación del bloque de login/registro */
+
 .auth-links {
   display: flex;
   align-items: center;
   gap: 2em;
-  margin-left: 3em; /* Esta línea separa login/registro del resto */
+  margin-left: 3em; 
+}
+
+.cerrar-sesion {
+  cursor: pointer;
+  font-family: "Orbitron", sans-serif;
+  font-weight: 500;
+  font-size: 1.3rem;
+  color: #FFFFFF;
+  transition: color 0.3s;
+}
+
+.cerrar-sesion:hover {
+  color: #8A2BE2;
+}
+
+.saludo-usuario {
+  color: #fff;
+  font-family: "Orbitron", sans-serif;
+  font-size: 1.2rem;
+  margin-right: 1em;
 }
