--- a/src/componentes/buscador/Buscador.css
+++ b/src/componentes/buscador/Buscador.css
@@ -4,13 +4,13 @@
   align-items: center;
   background-color: #B0B0B0;
   margin: 0;
-  padding-top: 15px;
+  padding-top: 100px;
 }
 
 .search-bar{
   width: 100%;
-  max-width: 400px;
-  padding: 10px 15px;
+  max-width: 500px;
+  padding: 15px 20px;
   font-size: 16px;
   border: 1px solid #8A2BE2;
   outline: none;
@@ -29,4 +29,12 @@
   font-style: normal;
   font-variation-settings:
     "wdth" 100;
+}
+
+.category-filter {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: white;
+  margin-left: 10px;
 }
