--- a/src/paginas/SobreNosotros.css
+++ b/src/paginas/SobreNosotros.css
@@ -1,3 +1,8 @@
+.sobre-nosotros-page {
+  background-color: #B0B0B0;
+  padding: 50px 0;
+}
+
 .sobre-nosotros {
   background-color: #1A1A2E;
   color: #fff;
