--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,12 @@
+:root {
+  --bs-body-bg: #B0B0B0;
+}
+
 body {
   background-color: #B0B0B0;
   font-family: 'Montserrat', sans-serif;
-  color: #333;
+  color: #1A1A2E;
 }
-
 
 main, p, span {
   font-family: 'Montserrat', sans-serif;
