--- a/src/paginas/DetalleProducto.css
+++ b/src/paginas/DetalleProducto.css
@@ -35,6 +35,9 @@
   object-fit: contain;
   border-radius: 15px;
   background-color: #fff;
+  box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.473);
+  animation: fadeIn 0.6s ease-in-out;
+  border: 3px solid #8A2BE2;
 }
 
 .btn-agregar {
