--- a/src/componentes/form/FormC.css
+++ b/src/componentes/form/FormC.css
@@ -1,19 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&family=Orbitron:wght@500;700&display=swap');
 
-.form-container{
-  background-color: #B0B0B0;
-  font-family: 'Montserrat', sans-serif;
-  padding: 50px;
-  padding: 2rem; 
+body{  
+  background-color: #B0B0B0 !important;     
 }
 
-.form-wrapper .form-personalizado {
-  background-color: #B0B0B0;
+.formulario-page {
+  margin-top: 35px;
+  margin-bottom: 35px;
 }
 
-.form-wrapper {
-  min-height: 100vh;
-  background-color: #B0B0B0;
+.form-wrapper {   
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,8 +47,11 @@
 }
 
 .form-check-input {
-  cursor: pointer;  
+  border: 1px solid #1A1A2E !important; 
+  border-radius: 6px;
+  cursor: pointer; 
 }
+
 .form-check-label {
   font-size: 0.95rem;
   font-family: 'Montserrat', sans-serif;
