--- a/src/componentes/buscador/Buscador.css
+++ b/src/componentes/buscador/Buscador.css
@@ -9,10 +9,11 @@
 
 .search-bar{
   width: 100%;
-  max-width: 500px;
+  max-width: 1000px;
   padding: 15px 20px;
   font-size: 16px;
-  border: 1px solid #8A2BE2;
+  border: 2px solid #8A2BE2;
+  border-radius: 10px;
   outline: none;
   transition: all 0.3s ease;
 }
@@ -33,7 +34,7 @@
 
 .category-filter {
   padding: 10px;
-  border: 1px solid #8A2BE2;
+  border: 2px solid #8A2BE2;
   border-radius: 5px;
   background: white;
   margin-left: 10px;
