--- a/src/componentes/cards/Cards.css
+++ b/src/componentes/cards/Cards.css
@@ -79,3 +79,24 @@
 .home-btn-agregar:active {
   transform: scale(0.95);
 }
+
+.card-favorito-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 1.5rem;
+  color: #8A2BE2;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.card-favorito-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 3rem; 
+  color: #8A2BE2;
+  cursor: pointer;
+  z-index: 10;
+    transition: transform 0.3s ease, text-shadow 0.3s ease;
+}
