--- a/src/componentes/tablas/TablaProductos.css
+++ b/src/componentes/tablas/TablaProductos.css
@@ -2,7 +2,7 @@
   background-color: #fff;
   border-radius: 16px;
   padding: 20px;
-  box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 6px 20px rgb(0, 0, 0);
   overflow-x: auto;
 }
 
