--- a/src/paginas/FormAdmin.css
+++ b/src/paginas/FormAdmin.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap');
+
 .form-titulo {
   font-family: 'Orbitron', sans-serif;
   color: #8A2BE2;
@@ -9,5 +11,27 @@
   background-color: #fff;
   padding: 40px;
   border-radius: 16px;
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.829);
+}
+
+.btn-agregar {
+  background-color: #8A2BE2;
+  color: #fff;
+  border: 2px solid #8A2BE2;
+  border-radius: 8px;
+  padding: 15px 25px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  transition: all 0.3s ease;
+  font-family: 'Orbitron', sans-serif;
+}
+
+.btn-agregar:hover {
+  background-color: #fff;
+  color: #8A2BE2;
+  transform: scale(1.05);
+}
+
+.btn-agregar:active {
+  transform: scale(0.95);
 }
