--- a/src/paginas/FormAdmin.css
+++ b/src/paginas/FormAdmin.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap');
 
 .form-titulo {
-  font-family: 'Orbitron', sans-serif;
+  font-family: "Orbitron", sans-serif;  
+  font-weight: 500;
+  font-style: normal;
   color: #8A2BE2;
-  text-align: center;
-  margin-bottom: 25px;
+  text-align: center;  
 }
 
 .form-personalizado {
