--- a/src/paginas/Favoritos.css
+++ b/src/paginas/Favoritos.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap');
+
 html,
 body {
   height: 100%;
@@ -15,4 +17,20 @@ body {
 
 .text-center {
   margin-bottom: 150px;
+}
+
+.titulo-favoritos {
+  color: #8A2BE2;
+  font-family: "Orbitron", sans-serif;  
+  font-weight: 600;
+  font-style: normal;
+  font-size: xx-large;
+}
+
+.titulo-dos {
+  color:#1A1A2E;
+  font-family: "Montserrat", sans-serif;
+  font-size:large;
+  font-weight: 500;
+  font-style: normal;
 }
